--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.15"
   },
