--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "stream-browserify": "^3.0.0",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
