--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
@@ -13,11 +16,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.15",
+    "tailwind": "^4.0.0",
     "toastr": "^2.1.4",
     "yarn": "^1.22.22"
   },
