--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
-    "react-input-mask": "^2.0.4",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
