--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^11.0.5",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.15",
+    "sweetalert2": "^11.21.0",
     "tailwind": "^4.0.0",
     "toastr": "^2.1.4",
     "yarn": "^1.22.22"
