--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-input-mask-next": "^3.0.0-alpha.12",
+    "react-password-checklist": "^1.8.1",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
