--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
     "@popperjs/core": "^2.11.8",
+    "@react-input/mask": "^2.0.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
@@ -16,7 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
-    "react-input-mask-next": "^3.0.0-alpha.12",
+    "react-input-mask": "^2.0.4",
     "react-password-checklist": "^1.8.1",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
@@ -26,7 +28,8 @@
     "sweetalert2": "^11.21.0",
     "tailwind": "^4.0.0",
     "toastr": "^2.1.4",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "zod": "^3.25.51"
   },
   "scripts": {
     "start": "react-scripts start",
