--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-input/mask": "^2.0.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.13.1",
     "bootswatch": "^5.3.3",
     "buffer": "^6.0.3",
     "os-browserify": "^0.3.0",
