--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.0.1",
-    "@mui/material": "^7.1.0",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "@popperjs/core": "^2.11.8",
     "@react-input/mask": "^2.0.4",
+    "antd": "^5.26.5",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
@@ -16,6 +18,9 @@
     "buffer": "^6.0.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
@@ -23,6 +28,7 @@
     "react-password-checklist": "^1.8.1",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.15",
